--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.25</slf4j.version>
         <commons-cli.version>1.4</commons-cli.version>
+        <LibSLParser.version>2f196bd9</LibSLParser.version>
     </properties>
 
     <repositories>
