--- a/kex.ini
+++ b/kex.ini
@@ -66,7 +66,7 @@ timeout = 5
 defaultAllocationSize = 512
 
 psInlining = true
-memspacing = false
+memspacing = true
 slicing = false
 
 logQuery = true
