--- a/kex-test.ini
+++ b/kex-test.ini
@@ -20,7 +20,7 @@ timeout = 10000
 
 [inliner]
 enabled = true
-depth = 5
+depth = 1
 irInlining = false
 ignore = org.jetbrains.research.kex.test.Intrinsics
 ignore = kotlin.jvm.internal.Intrinsics
@@ -41,7 +41,7 @@ defaultAllocationSize = 512
 
 psInlining = true
 memspacing = true
-slicing = true
+slicing = false
 
 logQuery = true
 logFormulae = true
