--- a/kex-test/pom.xml
+++ b/kex-test/pom.xml
@@ -37,12 +37,26 @@
             <artifactId>kex-intrinsics</artifactId>
             <version>${kex-intrinsics.version}</version>
         </dependency>
+        <!-- library checker's dependencies -->
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.7.5</version>
+        </dependency>
     </dependencies>
 
     <repositories>
         <repository>
             <id>github-vorpal-research-kotlin-maven</id>
             <url>https://maven.vorpal-research.science</url>
+        </repository>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>Maven Repository Switchboard</name>
+            <url>https://repo1.maven.org/maven2</url>
         </repository>
     </repositories>
 
