--- a/kex-runner/pom.xml
+++ b/kex-runner/pom.xml
@@ -88,6 +88,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
+        </dependency>>
         <dependency>
             <groupId>com.jetbrains.research</groupId>
             <artifactId>libsl</artifactId>
