--- a/kex-executor/pom.xml
+++ b/kex-executor/pom.xml
@@ -16,6 +16,12 @@
     <properties>
         <exec.main>org.jetbrains.research.kex.KexExecutorKt</exec.main>
     </properties>
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
