--- a/kex-runner/pom.xml
+++ b/kex-runner/pom.xml
@@ -88,7 +88,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
-        </dependency>>
+        </dependency>
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>org.jacoco.core</artifactId>
+            <version>0.8.5</version>
+        </dependency>
         <dependency>
             <groupId>org.jetbrains.research</groupId>
             <artifactId>libsl</artifactId>
